gccida/g1/expand_function_end
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7277:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7285:4: error: expected ';' after expression
rtx k; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7285:5: error: use of undeclared identifier 'k'
rtx k; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7288:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7290:4: error: expected ';' after expression
rtx x_nonlocal_goto_handler_slots; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7290:5: error: use of undeclared identifier 'x_nonlocal_goto_handler_slots'
rtx x_nonlocal_goto_handler_slots; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7294:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7294:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7297:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7297:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7299:4: error: expected ';' after expression
rtx v30; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7299:5: error: use of undeclared identifier 'v30'
rtx v30; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7300:4: error: expected ';' after expression
rtx return_rtx; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7300:5: error: use of undeclared identifier 'return_rtx'
rtx return_rtx; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7302:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7303:4: error: expected ';' after expression
rtx v34; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7303:5: error: use of undeclared identifier 'v34'
rtx v34; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7318:38: error: expected expression
v11 = round_trampoline_addr( *( rtx *)( v10 + 8)); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/function.c:7362:7: error: use of undeclared identifier 'k'
for ( k = get_insns( ); k; k = k[1].fld[0].rtx ) 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_function_end/src/obj/function.o] Error 1
